8224204: Replace wildcard address with loopback or local host in tests - part 10
Fixed intermittently failing tests

Reviewed-by: chegar